
Sun Sep  5 20:03:56 PDT 1999
(Raster)

and dont asume an iconbox actually can be found and exists

-------------------------------------------------------------------------------

Mon Sep  6 20:33:51 PDT 1999
(Raster)

fixed keyebindings not working on both heads in multihead
fixed focus changing in multihead
group proerties are now all saved to disk and loaded again each session.

gee - only bug left on list is to update all of dox,
only feature left is dnd in iconbox.. :)

now hurry up geoff and christian.. finish off :)

-------------------------------------------------------------------------------

Tue Sep  7 00:12:33 PDT 1999
(Raster)

you can now drag from the pager into the iconbox.. :)

-------------------------------------------------------------------------------

Tue Sep  7 08:50:03 PDT 1999
(Raster)

added lots of paranoia checkign around the PixImg stuff in draw.c - if creation
fails at any point it cleans up and bails out... if creation of any piximg
fails E drops back to opque move mode automatically.

-------------------------------------------------------------------------------

Tue Sep  7 08:52:58 PDT 1999
(Raster)

made the auto insertion into ~/.xession etc exec thather than just run it

-------------------------------------------------------------------------------

Tue Sep  7 11:26:24 PDT 1999
(Raster)

fixed "not recognising clicks when chaded" problem

-------------------------------------------------------------------------------

Tue Sep  7 14:36:02 PDT 1999
(Mandrake)

yet more KDE stuff.  time to make a couple of configuration flags, add in
the stuff to the main event loop, and test test test

-------------------------------------------------------------------------------

Tue Sep  7 16:33:15 PDT 1999
(Mandrake)

more stuff for KDE support

-------------------------------------------------------------------------------

Tue Sep  7 17:03:02 PDT 1999
(Mandrake)

well, I suppose if we're going to CHECK a variable, we should SET it.