@@ -1,0 +1,18 @@
+"pix/mon.png" NULL "*term*" "Eterm"
+"pix/mon.png" NULL "*term*" "XTerm"
+"pix/mon.png" NULL "rxvt" "XTerm"
+"pix/mon.png" NULL "GnomeTerminal" "GnomeTerminal"
+"pix/note.png" NULL "*Player" "xmms"
+"pix/note.png" NULL "*Playlist" "xmms"
+"pix/note.png" NULL "*Player" "x11amp"
+"pix/note.png" NULL "*Playlist" "x11amp"
+"pix/note.png" NULL "main" "GQmpeg"
+"pix/note.png" NULL "gmix" "Gmix"
+"pix/world.png" NULL "tkrat" "Tkrat"
+"pix/spider.png" NULL NULL "Netscape"
+"pix/apple.png" NULL NULL "Gimp"
+"pix/pawn.png" NULL NULL "X-Chat"
+"pix/pumpkin.png" "* Settings" NULL NULL
+"pix/tv2.png" NULL NULL "Xawtv"
+"pix/tv2.png" NULL NULL "Enlightenment_Pager"
+"pix/dunny.png" NULL "gmc" NULL
