@@ -12,6 +12,8 @@ epix_DATA = wait1.png wait2.png wait3.png wait4.png \
 	    areas.png bg.png key_ctrl.png key_lock.png key_mod1.png \
             key_mod2.png key_mod3.png key_mod4.png key_mod5.png \
 	    key_shift.png mouse_0.png mouse_1.png mouse_2.png \
-	    mouse_3.png mouse_any.png key_blank.png snapshots.png
+	    mouse_3.png mouse_any.png key_blank.png snapshots.png \
+	    apple.png calc.png clock.png easter.png mon.png note.png \
+	    pawn.png pumpkin.png spider.png tv2.png world.png
 
 EXTRA_DIST = $(epix_DATA)
