@@ -1370,3 +1370,11 @@ Tue Sep  7 17:03:02 PDT 1999
 (Mandrake)
 
 well, I suppose if we're going to CHECK a variable, we should SET it.
+
+-------------------------------------------------------------------------------
+
+Tue Sep  7 17:08:13 PDT 1999
+(Raster)
+
+added icons and icondefs file.. feel free to submti nice icons and addtions to
+the icondefs file for your favorite apps :)
